--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# More files to ignore
+.env 
+data.zip
+logs 
+unzipped_data 
+*.json
+data/*
+data 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
